--- a/src/_sass/_colors.scss
+++ b/src/_sass/_colors.scss
@@ -91,8 +91,8 @@ $osd_insensitive_bg_color: darken($osd_bg_color, 3%);
 $osd_insensitive_fg_color: mix($osd_fg_color, opacify($osd_bg_color, 1), 30%);
 $osd_borders_color: $osd_button_border;
 
-$panel_bg: #21232b;
-$panel_fg: $osd_fg_color;
+$panel_bg: $base_color;
+$panel_fg: $text_color;
 
 $dash_bg: $dark_sidebar_icon_bg;
 $dash_fg: $osd_fg_color;
